<resources>
    <string name="app_name">MyDSapp</string>
    <string name="client">Client</string>
    <string name="manager">Manager</string>
    <string name="continue_as">Continue as:</string>
    <string name="welcome_to_our_booking_app">Welcome to our booking app!</string>
    <string name="choose_your_action">Choose your action:</string>
    <string name="add_available_dates">Add available dates</string>
    <string name="add_rooms">Add rooms</string>
    <string name="room_name">Room name</string>
    <string name="firstdate">firstdate</string>
    <string name="first_date">First date</string>
    <string name="last_date">Last date</string>
    <string name="first_date_mm_dd_yyyy">First date MM/DD/YYYY</string>
    <string name="last_date_mm_dd_yy">Last date MM/DD/YY</string>
    <string name="done">Done</string>
    <string name="goback" />
</resources>