<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_our_booking_app"
        android:textSize="26sp"
        android:textColor="@color/textPrimary"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="120dp"/>

    <TextView
        android:id="@+id/second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_as"
        android:textSize="18sp"
        android:textColor="@color/textPrimary"
        app:layout_constraintTop_toBottomOf="@id/first"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/managerbutton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/manager"
        android:textSize="18sp"
        android:textColor="@color/textPrimary"
        android:backgroundTint="@color/secondaryBackgroundColor"
        app:layout_constraintTop_toBottomOf="@id/second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/clientbutton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/client"
        android:textSize="18sp"
        android:textColor="@color/textPrimary"
        android:backgroundTint="@color/secondaryBackgroundColor"
        app:layout_constraintTop_toBottomOf="@id/managerbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>