<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".BookRoom">

    <TextView
        android:id="@+id/message"
        android:layout_width="348dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:text="Please fill in:"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/name"
        android:layout_width="138dp"
        android:layout_height="65dp"
        android:layout_marginTop="52dp"
        android:hint="@string/room_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message" />

    <EditText
        android:id="@+id/date1"
        android:layout_width="233dp"
        android:layout_height="57dp"
        android:layout_marginTop="52dp"
        android:hint="@string/first_date_mm_dd_yyyy"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/date2"
        android:layout_width="231dp"
        android:layout_height="53dp"
        android:layout_marginTop="48dp"
        android:hint="@string/last_date_mm_dd_yy"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date1" />

    <Button
        android:id="@+id/next"
        android:layout_width="126dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="116dp"
        android:padding="8dp"
        android:text="@string/done"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date2"
        app:layout_constraintVertical_bias="0.528" />

    <Button
        android:id="@+id/goback"
        android:layout_width="126dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:text="Return"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next"
        app:layout_constraintVertical_bias="0.797" />


</androidx.constraintlayout.widget.ConstraintLayout>