<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".ManagerMenu">

    <TextView
        android:id="@+id/options"
        android:layout_width="217dp"
        android:layout_height="36dp"
        android:layout_marginTop="120dp"
        android:text="@string/choose_your_action"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/adddatebutton"
        android:layout_width="149dp"
        android:layout_height="78dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:padding="8dp"
        android:text="@string/add_available_dates"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/addroomsbutton"
        app:layout_constraintStart_toStartOf="@+id/addroomsbutton"
        app:layout_constraintTop_toBottomOf="@+id/addroomsbutton"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/addroomsbutton"
        android:layout_width="149dp"
        android:layout_height="78dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:padding="8dp"
        android:text="@string/add_rooms"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/reservationsbutton"
        android:layout_width="149dp"
        android:layout_height="78dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        android:text="Show reservations"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/adddatebutton"
        app:layout_constraintStart_toStartOf="@+id/adddatebutton"
        app:layout_constraintTop_toBottomOf="@+id/adddatebutton"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/statisticsbutton"
        android:layout_width="149dp"
        android:layout_height="78dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:padding="8dp"
        android:text="Show statistics"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/reservationsbutton"
        app:layout_constraintStart_toStartOf="@+id/reservationsbutton"
        app:layout_constraintTop_toBottomOf="@+id/reservationsbutton"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/returnbutton"
        android:layout_width="149dp"
        android:layout_height="78dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        android:text="Return"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/statisticsbutton"
        app:layout_constraintStart_toStartOf="@+id/statisticsbutton"
        app:layout_constraintTop_toBottomOf="@+id/statisticsbutton"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>